--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,14 +14,13 @@ dependencies:
   flutter_typeahead: ^1.6.1
   cached_network_image: ^1.1.1
   duration: ^2.0.8
+  flutter_html: ^0.10.4
 
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  json_serializable: ^3.1.0
-  build_runner: ^1.6.5
 
 
 flutter:
