--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cached_network_image: ^1.1.1
   duration: ^2.0.8
   flutter_html: ^0.10.4
+  youtube_player_flutter: ^3.0.0+1
 
   cupertino_icons: ^0.1.2
 
